--- a/index_style.css
+++ b/index_style.css
@@ -11,24 +11,16 @@
     nav {
     display: flex;
     background-color: #f7f7f7;
-    /**align-items: center;**/
     }
 
-    /**nav div{
-    height: 30px;
-    flex-grow: 4;
-    padding: 10px;
-    }**/
-    
-    /**nav div img {
-    height: 100%;
-    }**/
 
-    nav div1 img{
+    /**nav div1 img{
       height: 30px;
       flex-grow: 4;
       padding: 10px;
-    }
+    }**/
+
+
     nav div2{
       position: absolute;
       height: 30px;
