--- a/index_style.css
+++ b/index_style.css
@@ -14,11 +14,11 @@
     }
 
 
-    /**nav div1 img{
+    nav div1 img{
       height: 30px;
       flex-grow: 4;
       padding: 10px;
-    }**/
+    }
 
 
     nav div2{
