--- a/index_style.css
+++ b/index_style.css
@@ -89,10 +89,13 @@
         width: 30px;
       }
 
-      .flex-container > div1 div_date{
-        /**position: absolute;**/
+      /**.flex-container > div1 div_date{
         font-size: 10px;
-        /**right: 580px;**/
+        margin-left: 300px;
+      }**/
+  
+      #date1{
+        font-size: 10px;
         margin-left: 300px;
       }
 
