--- a/index_style.css
+++ b/index_style.css
@@ -13,13 +13,12 @@
     background-color: #f7f7f7;
     }
 
-
+/**HEAD**/
     nav div1 img{
       height: 30px;
       flex-grow: 4;
       padding: 10px;
     }
-
 
     nav div2{
       position: absolute;
@@ -73,52 +72,78 @@
        
       }
 
+      div p {
+        font-style: italic;
+      }
+
+
+      .flex-container ~  div1 p{
+        text-shadow: darkolivegreen;
+      }
+
+
+      /**div ~ p {
+        background-color: yellow;
+      }**/
+
+
       /** CONTAINER 1 **/
+      p::first-line {
+        font-weight: 300;
+        
+      }
       
     .flex-container > div1 {
         padding: 10px;
         margin: 10px;
         background-color: #ffffff;
         width: 450px;
-        flex-grow: 2.5;
+        flex-grow: 0;
         align-self: center;
 
       }
+
       
       .flex-container > div1 img{
         width: 30px;
       }
 
-      /**.flex-container > div1 div_date{
+      p.date{
         font-size: 10px;
-        margin-left: 300px;
-      }**/
-  
+        font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantare;
+      }
       #date1{
-        font-size: 10px;
-        margin-left: 300px;
-        margin-bottom: 0px;
-        
+        margin-left: 350px;
+        margin-top: -20px;
       }
 
       .flex-container > div1 div_post_img img{
-        width: 420px;
+        width: 450px;
         height: 210px;
         margin-bottom: -150px;
-        align-items: center;
       }
 
-      .flex-container > div1 div_post{
-        position: absolute;
-        top: 370px;
-        margin-left: -425px;
+      p.post{
+        font-family: 'Courier New', Courier, monospace;
       }
-
+      #post1{
+        margin-top: 150px;
+      }
+     
       .flex-container > div1 div_like img{
-        width: 50px;
-        margin-bottom: -225px;
-        margin-left: -425px;
+        width: 35px;
       }
+
+
+
+
+
+
+
+
+
+
+
 
 
 
