--- a/index_style.css
+++ b/index_style.css
@@ -21,18 +21,16 @@
     }
 
     nav div2{
-      position: absolute;
       height: 30px;
       flex-grow: 4;
       padding: 10px; 
-      left: 600px;
+      margin-left: 600px;
     }
     nav div3 img{
-      position: absolute;
       height: 30px;
       flex-grow: 4;
       padding: 10px;
-      right: 150px ;
+      margin-right: 150px;
     }
     
     
