--- a/login_style.css
+++ b/login_style.css
@@ -16,13 +16,15 @@ body {
     background-color: #f1f1f1;
     width: 22%;
     height: 55%;
+    min-width: 20em;
+    min-height: 30em;
     margin: auto;
-    box-shadow: 0 0 5px 5px #888888;
+    box-shadow: 0 0 0.1em 0.1em #888888;
 }
 
 div.picture-box ~ p {
     text-align: center;
-    font-size: 23px;
+    font-size: 1.2em;
 }
 
 div.picture-box + h1 {
@@ -31,18 +33,18 @@ div.picture-box + h1 {
 
 div.login-box p.link {
     text-align: center;
-    font-size: 23px;
+    font-size: 1.2em;
 }
 
 #login-picture {
-    width: 70px;
-    height: 70px;
+    width: 4.5em;
+    height: 4.5em;
 }
 
 div.picture-box {
-    padding-left: 10px;
-    padding-top: 10px;
-    width: 70px;
+    padding-left: 0.8em;
+    padding-top: 0.8em;
+    width: 4.5em;
 }
 
 p > a:hover {
@@ -83,14 +85,15 @@ input[type=password] {
 
 div.login-container {
     display: block;
-    margin: auto;
-    width: 20%;
+    margin: auto auto 1em;
+    width: 4.7em;
+
 }
 
 input[type=submit] {
+    width: 100%;
     display: block;
-    margin: auto;
-    font-size: 15px;
+    font-size: 1.1em;
     background-color: #659BDF;
     color: white;
     border: none;
@@ -102,5 +105,4 @@ input[type=submit] {
 
 input[type=submit]:hover {
     background-color: #416ea6;
-    padding: 6% 8%;
 }
