--- a/index_style.css
+++ b/index_style.css
@@ -5,6 +5,7 @@
      margin: 0;
      padding: 0;
      background-color: DodgerBlue;
+     position: relative;
  }
 
 nav {
@@ -164,4 +165,20 @@ p.post3{
 .flex-container > div3 div_post_img img{
     width: 100%;
     height: 50%;
+}
+
+
+.postsf {
+    position: relative;
+    display:block;
+    padding: 2%;
+    margin: 5%;
+    background-color: #ffffff;
+    width: 70%;
+    align-self: center;
+    }
+.tere{
+    position: relative;
+    text-align: center;
+    
 }
