--- a/index_style.css
+++ b/index_style.css
@@ -167,7 +167,6 @@ p.post3{
     height: 50%;
 }
 
-
 .postsf {
     position: relative;
     display:block;
@@ -177,8 +176,13 @@ p.post3{
     width: 70%;
     align-self: center;
     }
+
 .tere{
     position: relative;
     text-align: center;
-    
+}
+
+div.postsf > img {
+    width: 100%;
+    height: 50%;
 }
