--- a/index_style.css
+++ b/index_style.css
@@ -14,6 +14,7 @@ nav {
 
 }
 
+
 .WebContainer {
         width: 100%;
         height: auto;
@@ -37,6 +38,27 @@ nav div3 img{
     flex-grow: 4;
     padding: 20px;
 }
+.dropbtnpic {
+    cursor: pointer;
+}
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #2980B9;
+}
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #ffffff;
+    min-width: 250px;
+    transform: translateX(-75%);
+    right: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.show {display:block;}
 
 
 nav div.search-container > input {
