--- a/index_style.css
+++ b/index_style.css
@@ -201,11 +201,18 @@ p.post3{
 
 .tere{
     position: relative;
-    text-align: center;
+    /*text-align: center;*/
 }
 
 div.postsf > img {
     width: 100%;
     height: 50%;
 }
-
+.imageprof{
+    width: 10%;
+    height: auto;
+}
+.imagelike{
+    width: 10%;
+    height: auto;
+}
